# grandma_drink_water_notification

./: Cargo.toml  Dockerfile  README.md
japanese_readme/: README.md
src/: api.rs  main.rs
src/api/: line_notify.rs  weather.rs
