[package]
name = "grandma_drink_water_notification"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = {version = "0.12.5", features = ["multipart", "json"]}
actix-web = "4.8.0"
anyhow = "1.0.86"
rand = "0.8.5"
chrono = "0.4.38"
chrono-tz = "0.9.0"
serde = { version = "1.0.204", features = ["derive"] }
